k8s/infra/leachnet/kube-system/traefik/legacy/daemonset.yaml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-daemon-set
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v2.4.0
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: admin
          containerPort: 8080
        - name: rtsp
          containerPort: 9982
        - name: mqtts
          containerPort: 8883
        - name: ldaps
          containerPort: 636
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 1
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 1
          successThreshold: 1
          timeoutSeconds: 2
        args:
        # Enable the dashboard without requiring a password. Not recommended
        # for production. (secured by being on a restricted ClusterIP)
        - --api.insecure
        - --api.dashboard
        
        # Specify that we want to use Traefik as an Ingress Controller.
        - --providers.kubernetesingress
        - --providers.kubernetesCRD
        
        # Enable metrics and pinging.
        - --ping
        - --ping.entrypoint=traefik
        - --metrics.prometheus=true
        
        - --entryPoints.web.address=:80
        - --entryPoints.websecure.address=:443
        - --entryPoints.websecure.http.tls
        - --entryPoints.rtsp.address=:9982
        - --entryPoints.mqtts.address=:8883
        - --entryPoints.ldaps.address=:636
        
        # Enable debug logging. Useful to work out why something might not be
        # working. Fetch logs of the pod.
        # - --log.level=debug
