k8s/infra/leachnet/kube-system/traefik/legacy/https-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-catchall
  namespace: kube-system
spec:
  entryPoints:
  - web
  routes:
  - match: HostRegexp(`{host:.+}`)
    kind: Rule
    priority: 9000
    services:
    - kind: TraefikService
      name: noop@internal
    middlewares:
    - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
